--- a/index.html
+++ b/index.html
@@ -13,16 +13,39 @@
 
 <div class="container">
   <div class="ml-0 p-3">
-    Obra de Teatro
+    
   </div>
   <div class="row">
-    <img src="img/rainbow.png" alt="imagen de...">
+    <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/inicio%20mord.jpg" alt="imagen de...">
     <div class="col">
-      <strong>MORDERÉ LA PIEL DE TU CORAZON</strong>
+      <em>Obra de Teatro</em>
+      <hr>
       <em>"Entregate, vamos a ir despacio. Te invito a despojarte de esa envoltura que te impide sentir la experiencia de lo bello, de lo que te nubla la mirada, eso que ancla el fluir del deseo que te corre por la sangre. Te invito a que cortes los amarres que te esclavizan a tus prejuicios"</em>
     </div>
   </div>
 </div>
+
+<hr>
+
+<hr>
+
+<div class="container">
+  <div class="container"></div>
+  <div class="container"></div>
+  <div class="col">
+    <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%204.jpg" alt="imagen de...">
+    <div class="col">
+      <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%201.jpg" alt="imagen de...">
+    </div>
+    <div class="col">
+      <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%203.jpg" alt="imagen de...">
+    </div>
+  </div>
+</div>
+
+<hr>
+
+Morderé la piel de tu corazón es un unipersonal que te “provoca” a vivir la metamorfosis de un cuerpo que mediante un relato muestra sus experiencias de cicatrización. Te invita a mirarte, a acariciarte, a incomodarte y a dejarte llevar hacia los lugares más perturbadores, para romper con todo lo que te dijeron que es profano y acercarte hacia lo sublime, hacia la experiencia de eso que nunca te quisieron revelar que es “sagrado”. Dejate morder la piel que late sobre tu corazón. Apelando a nuestra ternura y fragilidad como actos de rebeldía para habitar lo singular del deseo
 
 
   <!-- ^ -->
