--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
 <hr>
 
 <div class="container">
-  <div class="container"></div>
-  <div class="container"></div>
-  <div class="col">
-    <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%204.jpg" alt="imagen de...">
+  <div class="container">
+    <div class="container"></div>
     <div class="col">
-      <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%201.jpg" alt="imagen de...">
-    </div>
-    <div class="col">
-      <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%203.jpg" alt="imagen de...">
+      <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%204.jpg" alt="imagen de...">
+      <div class="col">
+        <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%201.jpg" alt="imagen de...">
+      </div>
+      <div class="col">
+        <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%203.jpg" alt="imagen de...">
+      </div>
     </div>
   </div>
 </div>
