--- a/index.html
+++ b/index.html
@@ -11,34 +11,30 @@
     <strong>MORDERÉ LA PIEL DE TU CORAZÓN</strong>
   </div></h4>
 
-<div class="container">
-  <div class="ml-0 p-3">
-    
-  </div>
-  <div class="row">
-    <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/inicio%20mord.jpg" alt="imagen de...">
-    <div class="col">
-      <em>Obra de Teatro</em>
-      <hr>
-      <em>"Entregate, vamos a ir despacio. Te invito a despojarte de esa envoltura que te impide sentir la experiencia de lo bello, de lo que te nubla la mirada, eso que ancla el fluir del deseo que te corre por la sangre. Te invito a que cortes los amarres que te esclavizan a tus prejuicios"</em>
+<hr>
+
+<em>"Entregate, vamos a ir despacio. Te invito a despojarte de esa envoltura que te impide sentir la experiencia de lo bello, de lo que te nubla la mirada, eso que ancla el fluir del deseo que te corre por la sangre. Te invito a que cortes los amarres que te esclavizan a tus prejuicios"</em>
+
+<hr>
+
+<hr>
+
+<div class="container"></div>
+
+<div class="row">
+  <div class="col">
+    <div class="card">
+      <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/MLP%201%20.jpg" alt="imagen de...">
+      <div class="card-body">
+        <h1></h1>
+      </div>
     </div>
   </div>
-</div>
-
-<hr>
-
-<hr>
-
-<div class="container">
-  <div class="container">
-    <div class="container"></div>
-    <div class="col">
-      <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%204.jpg" alt="imagen de...">
-      <div class="col">
-        <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%201.jpg" alt="imagen de...">
-      </div>
-      <div class="col">
-        <img src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mordere%203.jpg" alt="imagen de...">
+  <div class="col">
+    <div class="card">
+      <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/MLP2.jpg" alt="imagen de...">
+      <div class="card-body">
+        <h1></h1>
       </div>
     </div>
   </div>
@@ -47,6 +43,48 @@
 <hr>
 
 Morderé la piel de tu corazón es un unipersonal que te “provoca” a vivir la metamorfosis de un cuerpo que mediante un relato muestra sus experiencias de cicatrización. Te invita a mirarte, a acariciarte, a incomodarte y a dejarte llevar hacia los lugares más perturbadores, para romper con todo lo que te dijeron que es profano y acercarte hacia lo sublime, hacia la experiencia de eso que nunca te quisieron revelar que es “sagrado”. Dejate morder la piel que late sobre tu corazón. Apelando a nuestra ternura y fragilidad como actos de rebeldía para habitar lo singular del deseo
+
+<hr>
+
+<hr>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Verónica Farias Victoria 
+      .
+      Actriz
+      <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mlp%20vero.jpg" alt="imagen de...">
+    </div>
+    <div class="col">
+      Guadalupe García  
+      Diseño Audiovisual
+      <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mpl%20guada.jpg" alt="imagen de...">
+    </div>
+    <div class="col">
+      Fernanda Ludueña 
+      Dirección e Iluminación
+      <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/mlp%20fer%20.jpg" alt="imagen de...">
+    </div>
+  </div>
+  <div class="row"></div>
+  <div class="row">
+    <div class="col"></div>
+  </div>
+</div>
+
+<hr>
+
+<strong>Contacto</strong>
+
+<li>
+  <li class="nav-item">
+    <a class="nav-link" href="https://www.instagram.com/morderelapieldetucorazon/">Instagram</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="https://www.youtube.com/watch?v=gUSaR9bPzQk">Música</a>
+  </li>
+</li>
 
 
   <!-- ^ -->
