--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <hr>
 
-<em>"Entregate, vamos a ir despacio. Te invito a despojarte de esa envoltura que te impide sentir la experiencia de lo bello, de lo que te nubla la mirada, eso que ancla el fluir del deseo que te corre por la sangre. Te invito a que cortes los amarres que te esclavizan a tus prejuicios"</em>
+<h4><em>"Entregate, vamos a ir despacio. Te invito a despojarte de esa envoltura que te impide sentir la experiencia de lo bello, de lo que te nubla la mirada, eso que ancla el fluir del deseo que te corre por la sangre. Te invito a que cortes los amarres que te esclavizan a tus prejuicios"</em></h4>
 
 <hr>
 
@@ -26,7 +26,8 @@
     <div class="card">
       <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/MLP%201%20.jpg" alt="imagen de...">
       <div class="card-body">
-        <h1></h1>
+        <div class="my-2 p-2"></div>
+        <p>Morderé la piel de tu corazón es un unipersonal que te “provoca” a vivir la metamorfosis de un cuerpo que mediante un relato muestra sus experiencias de cicatrización. </p>
       </div>
     </div>
   </div>
@@ -34,15 +35,13 @@
     <div class="card">
       <img class="card-img-top" src="https://raw.githubusercontent.com/lucianaprogramadora/lucianaprogramadora.github.io/master/MLP2.jpg" alt="imagen de...">
       <div class="card-body">
-        <h1></h1>
+        <p><div class="my-2 p-2"></div>Dejate morder la piel que late sobre tu corazón. Apelando a nuestra ternura y fragilidad como actos de rebeldía para habitar lo singular del deseo</p>
       </div>
     </div>
   </div>
 </div>
 
 <hr>
-
-Morderé la piel de tu corazón es un unipersonal que te “provoca” a vivir la metamorfosis de un cuerpo que mediante un relato muestra sus experiencias de cicatrización. Te invita a mirarte, a acariciarte, a incomodarte y a dejarte llevar hacia los lugares más perturbadores, para romper con todo lo que te dijeron que es profano y acercarte hacia lo sublime, hacia la experiencia de eso que nunca te quisieron revelar que es “sagrado”. Dejate morder la piel que late sobre tu corazón. Apelando a nuestra ternura y fragilidad como actos de rebeldía para habitar lo singular del deseo
 
 <hr>
 
@@ -75,16 +74,16 @@ Morderé la piel de tu corazón es un unipersonal que te “provoca” a vivir l
 
 <hr>
 
-<strong>Contacto</strong>
+<h4><em>Contacto</em></h4>
 
-<li>
+<ul>
   <li class="nav-item">
     <a class="nav-link" href="https://www.instagram.com/morderelapieldetucorazon/">Instagram</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="https://www.youtube.com/watch?v=gUSaR9bPzQk">Música</a>
   </li>
-</li>
+</ul>
 
 
   <!-- ^ -->
